# Retail-PriceAI

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py  template.py
src/NLP-regression/: __init__.py
src/NLP-regression/utils/: common.py
src/NLP_regression/components/: data_ingestion.py
src/NLP_regression/config/: configuration.py
src/NLP_regression/entity/: config_entity.py
src/NLP_regression/pipeline/: data_ingestion_pipeline.py
src/retail_priceai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
