[project]
name = "retail-priceai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.1",
    "ensure>=1.0.4",
    "huggingface-hub>=1.5.0",
    "langchain>=1.2.10",
    "litellm>=1.82.0",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-box>=7.4.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "transformers>=5.3.0",
]
